[package]
name = "scripture"
version = "0.5.0"
authors = ["Sealgair", "hunter.jay.k@gmail.com"]
edition = "2021"
description = "A robust command-line tool for managing, validating, and generating standardised Git commit messages."
licence = "MIT"
repository = "https://github.com/ThatSealgair/scripture"
readme = "README.md"
keywords = ["cli", "tool", "git"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.22"
# regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
textwrap = "0.16.1"
# toml = "0.8.19"
